# Vanguard

./: .gitignore  README.md  Version
cli/: Cargo.toml  readme.md
cli/src/: boot.rs  constants.rs  main.rs  settings.rs
cli/src/assets/: banner.rs  mod.rs  startup_disclaimer.rs
cli/src/commands/: add_http_route.rs  add_https_route.rs  add_iws_route.rs  add_secure_iws_route.rs  clear_terminal.rs  delete_http_route.rs  delete_https_route.rs  delete_iws_route.rs  delete_secure_iws_route.rs  echo.rs  exit.rs  get_http_route_list.rs  get_route_list.rs  get_ssl_files.rs  get_status.rs  logs.rs  mod.rs  version.rs
cli/src/core/: interprinter.rs  jrpc_payload.rs  mod.rs  rpc_client.rs  shared_memory.rs
cli/src/methods/: engine.rs
cli/src/models/: mod.rs
cli/src/utils/: banner.rs  console.rs  crypt_utility.rs  directory_utility.rs  file_utility.rs  json_utility.rs  logger_utility.rs  mod.rs  text_utility.rs  time_utility.rs
engine/: Cargo.toml  README.md
engine/src/: boot.rs  constants.rs  main.rs  runtime.rs  settings.rs
engine/src/common/: mod.rs
engine/src/core/: common_handler.rs  connection_lock.rs  connection_manager.rs  http_client.rs  http_proxy_client.rs  http_proxy_manager.rs  http_server.rs  https_server.rs  log_service.rs  mod.rs  models.rs  router.rs  rpc_session.rs  shared_memory.rs  tuned_stream.rs
engine/src/models/: application_parameters.rs  boot_result.rs  buffer_config.rs  config.rs  global_settings.rs  http_route.rs  http_server_config.rs  https_server_config.rs  logger_config.rs  mod.rs  reload_signal.rs  route.rs  rpc_server_config.rs  rpc_session.rs  shutdown_signal.rs  ssl_context.rs  ssl_entity.rs  ssl_file.rs  ssl_path.rs  traffic_policy.rs  upstream_settings.rs
engine/src/render/: dir_index_page.rs  internal_error_page.rs  mod.rs  not_found_page.rs
engine/src/resources/: mod.rs  vanguard_logo.rs
engine/src/rpc_service/: mod.rs  routes.rs  rpc_error.rs  rpc_middleware.rs  rpc_server.rs  rpc_status_message.rs
engine/src/utils/: base64_utility.rs  boot_display_utility.rs  console_utility.rs  crypt_utility.rs  directory_utility.rs  display_utility.rs  file_utility.rs  http_utility.rs  logger_utility.rs  mod.rs  network_utility.rs  rpc_utility.rs  text_utility.rs  time_utility.rs  tls_utility.rs
reprox_server/: .env  .gitignore  Cargo.toml  README.md  example.env  routing.json
reprox_server/src/: config.rs  main.rs  settings.rs
reprox_server/src/api_controller/: echo.rs  mod.rs
reprox_server/src/builds/: cli
reprox_server/src/core/: config.rs  http_server.rs  https_server.rs  init.rs  mod.rs  models.rs  router.rs
reprox_server/src/models/: mod.rs  route.rs  rpc_session.rs
reprox_server/src/rpc_service/: echo.rs  mod.rs  routes.rs  rpc_server.rs
reprox_server/src/utils/: config.rs  crypt_utility.rs  generate_hash.rs  generate_salt.rs  mod.rs  network_utility.rs  (+5 more)
(+188 files in other folders)
