[package]
name = "vanguard_cli_client"
version = "0.1.0"
edition = "2021"
authors = ["Umit Aksoylu <umitaksoylu98@gmail.com>"]
repository = "https://github.com/Aksoylu/Vanguard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
hyper-rustls = "0.22"
base64 = "0.21"
aes-gcm = "0.10"
hex = "0.4"
dirs = "4.0.0"
once_cell = "1.18"
shlex = "0.1"
reqwest = { version = "0.12", features = ["json"] }
crossterm = "0.26.0"
clap = { version = "4.5", features = ["derive"] }
prettytable-rs = "^0.10"
colored = "2.0"

[profile.dev]
panic = "abort"
