[package]
name = "vanguard_engine"
version = "0.1.0"
edition = "2021"
authors = ["Umit Aksoylu <umitaksoylu98@gmail.com>"]
repository = "https://github.com/Aksoylu/Vanguard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
jsonrpc-core = "14.0"
jsonrpc-http-server = "14.0.0"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
hyper-rustls = "0.22"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "0.2"
dirs = "4.0.0"

[profile.dev]
panic = "abort"
