[package]
name = "Reprox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
jsonrpc-core = "14.0"
jsonrpc-http-server = "14.0.0"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"


[profile.dev]
panic = "abort"
